# brave-core

./: DEPS  package-lock.json  package.json
app/: brave_command_ids.h  brave_generated_resources.grd
browser/: brave_browser_main_parts.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_content_browser_client.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/android/: brave_sync_worker.cc
browser/brave_shields/: ad_block_service_browsertest.cc  sources.gni
browser/brave_wallet/: BUILD.gn
browser/debounce/: debounce_browsertest.cc
browser/ephemeral_storage/: BUILD.gn  ephemeral_storage_1p_browsertest.cc  ephemeral_storage_browsertest.cc  ephemeral_storage_browsertest.h
browser/ipfs/: content_browser_client_helper_unittest.cc  ipfs_tab_helper.cc
browser/ipfs/test/: BUILD.gn  ipfs_service_browsertest.cc
browser/speedreader/: speedreader_tab_helper.cc  speedreader_tab_helper.h
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  brave_browser_window.h  browser_commands.cc  browser_commands.h
browser/ui/reader_mode/: brave_reader_mode_bubble_controller.cc  brave_reader_mode_bubble_controller.h
browser/ui/speedreader/: speedreader_bubble_browsertest.cc  speedreader_bubble_controller.cc  speedreader_bubble_controller.h  speedreader_bubble_view.h
common/: url_constants.cc  url_constants.h
components/brave_federated_learning/: BUILD.gn  brave_federated_learning_service.cc  brave_federated_learning_service.h  brave_operational_profiling.cc  brave_operational_profiling.h  brave_operational_profiling_features.cc
components/ipfs/: BUILD.gn  ipfs_service.cc  ipfs_service.h
components/resources/: brave_components_strings.grd
ios/app/: BUILD.gn  brave_core_main.mm  headers.gni
ios/browser/api/wallet/: BUILD.gn  brave_wallet_api+private.h  brave_wallet_api.mm  brave_wallet_service_factory.mm  eth_json_rpc_controller_ios.h  eth_json_rpc_controller_ios.mm  hd_keyring_ios.mm  keyring_controller_ios.h  keyring_controller_ios.mm
patches/: chrome-VERSION.patch  chrome-android-BUILD.gn.patch
test/: BUILD.gn
(+62 files in other folders)
