source_set("brave_federated_learning") {
  sources = [
    "brave_federated_learning_service.cc",
    "brave_federated_learning_service.h",
    "brave_operational_profiling.cc",
    "brave_operational_profiling.h",
    "brave_operational_profiling_features.cc",
    "brave_operational_profiling_features.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_stats/browser",
    "//brave/components/version_info",
    "//brave/vendor/bat-native-ads",
    "//components/metrics",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//url",
  ]
}
