# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/brave_wallet/common/buildflags/buildflags.gni")
import("//build/config/ios/rules.gni")
import("//ios/build/config.gni")

assert(brave_wallet_enabled)

source_set("wallet") {
  configs += [ "//build/config/compiler:enable_arc" ]

  sources = [
    "brave_wallet_api.h",
    "brave_wallet_api.mm",
    "brave_wallet_api+private.h",
    "brave_wallet_service_factory.h",
    "brave_wallet_service_factory.mm",
    "eth_json_rpc_controller_ios.h",
    "eth_json_rpc_controller_ios.mm",
    "hd_keyring_ios.h",
    "hd_keyring_ios.mm",
    "hd_keyring_ios+private.h",
    "keyring_controller_ios.h",
    "keyring_controller_ios.mm",
    "keyring_controller_ios+private.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_wallet/browser",
    "//components/keyed_service/ios:ios",
    "//ios/chrome/browser",
    "//ios/chrome/browser/browser_state",
    "//services/network/public/cpp",
  ]

  frameworks = [
    "Foundation.framework",
    "UIKit.framework",
  ]
}
